--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <div class="carousel-item">
                     <video autoplay muted loop playsinline>
-                        <source src="assets/imgs/Background/IMG-20250321-WA0352.jpg" type="video/mp4">
+                        <source src="assets/imgs/Background/IMG-20250321-WA0352.jpg">
                     </video>
                     <div class="carousel-caption text-center">
                         <h1 class="text-white display-5 fw-bold">Explore Global Education Opportunities</h1>
@@ -121,7 +121,7 @@
 
                 <div class="carousel-item">
                     <video autoplay muted loop playsinline>
-                        <source src="assets/imgs/Breadcrumbs/Events.jpg" type="video/mp4">
+                        <source src="assets/imgs/Breadcrumbs/Events.jpg">
                     </video>
                     <div class="carousel-caption text-center">
                         <h1 class="text-white display-5 fw-bold">Achieve Your Dreams with Expert Consultation</h1>
@@ -166,9 +166,18 @@
     <!-- Our about Section -->
     <div class="untree_co-section">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">About Us</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>Learn More About us</span></h1>
+                </h1>
+                <p class="lead">
+                    Mtendere is committed to providing the best possible education and opportunities for its students.
+    
+                </p>
+            </div>
             <div class="row justify-content-between">
                 <div class="col-lg-5 mb-5">
-                    <h2 class="section-title mb-4" data-aos="fade-up">About Mtendere Education Consult</h2>
                     <p class="lead text-muted" data-aos="fade-up" data-aos-delay="100">
                         We are a registered organization under the <strong>Malawi Government Business Registration Act
                             (No 12 of 2012)</strong>, with a strong passion for education and a mission to connect
@@ -215,7 +224,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
                     <div class="btn-icon bg-primary">
                         <i class="fa fa-graduation-cap text-white"></i>
                     </div>
@@ -230,7 +239,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
                     <div class="btn-icon bg-secondary">
                         <i class="fa fa-certificate text-white"></i>
                     </div>
@@ -245,7 +254,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
                     <div class="btn-icon bg-warning">
                         <i class="fa fa-book-reader text-white"></i>
                     </div>
@@ -266,13 +275,9 @@
 
     <div class="services-section">
         <div class="container">
+            
             <div class="row justify-content-between">
                 <div class="col-lg-4 mb-5 mb-lg-0">
-
-                    <div class="section-title mb-3" data-aos="fade-up" data-aos-delay="0">
-                        <h2 class="line-bottom mb-4">Our Core Values</h2>
-                    </div>
-
                     <p data-aos="fade-up" data-aos-delay="100">
                         At Mtendere Education Consult, we are committed to guiding and empowering students in their
                         academic journeys. <br> core values are the foundation of everything we do, ensuring that our
@@ -342,10 +347,12 @@
 
     <div class="untree_co-section">
         <div class="container">
-            <div class="row justify-content-center mb-3">
-                <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
-                    <h2 class="line-bottom text-center mb-4">Browse Top Category</h2>
-                </div>
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Top Category</h6>
+                <h1 class="display-5"><span class="text-primary">
+                            Explore Our Top Categories
+                        </span>
+                </h1>
             </div>
             <div class="row align-items-stretch">
                 <div class="col-sm-6 col-md-6 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="0">
@@ -451,19 +458,22 @@
 
     <div class="untree_co-section bg-light">
         <div class="container">
-            <div class="row justify-content-center mb-5">
-                <div class="col-lg-8 text-center" data-aos="fade-up">
-                    <h2 class="line-bottom text-center mb-4">Scholarship Opportunities Tailored for You</h2>
-                    <p>Mtendere Education Consult partners with globally
-                        accredited universities to help you study smarter, not harder.</p>
-                </div>
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Popular Scholarship</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>
+                            Our Top Scholarships
+                        </span>
+                </h1>
+                <p class="lead">
+                    Discover the best scholarships available for students across India.
+                </p>
             </div>
-
             <div class="row">
                 <!-- Program 1 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/Services/FB_IMG_1694264996679.jpg" alt="Medical Program"
+                        <a href="#"><img src="assets/imgs/courses/IMG-20230620-WA0436.jpg" alt="Medical Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -487,7 +497,7 @@
                 <!-- Program 2 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/Services/FB_IMG_1694265006101.jpg" alt="Engineering Program"
+                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="Engineering Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -511,7 +521,7 @@
                 <!-- Program 3 -->
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
                     <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="images/business-scholarship.jpg" alt="Business Program"
+                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="Business Program"
                                 class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
@@ -532,18 +542,57 @@
                     </div>
                 </div>
 
+                <!-- Program 4 -->
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
+                    <div class="custom-media border rounded bg-white shadow-sm p-3">
+                        <a href="#"><img src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="IT Program"
+                                class="img-fluid rounded mb-3"></a>
+                        <div class="custom-media-body">
+                            <div class="d-flex justify-content-between pb-2">
+                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
+                                        BSc</span></div>
+                                <div class="review"><span class="icon-star text-warning"></span> <span>4.6</span></div>
+                            </div>
+                            <h4 class="font-weight-bold">IT & Computer Science – 30% Scholarships</h4>
+                            <p>Study in the UK, USA, or Australia with scholarships based on academic performance.
+                                Internship opportunities and career support included.</p>
+                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
+                                <div><span class="price text-success">From $1,200/year</span></div>
+                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                                        data-toggle="modal">Enroll now
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-5">
+                <a href="#" class="btn btn-primary btn-lg">View all programs</a>
             </div>
         </div>
     </div>
 
     <div class="untree_co-section">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Why Choose Us?</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>
+                            Why Choose Mtendere Education Consult?
+                        </span>
+                </h1>
+                <p class="lead">
+                    <span>
+                        Mtendere Education Consult is a renowned, dedicated, and committed professional.
+                    </span>
+                </p>
+            </div>
             <div class="row">
                 <div class="col-lg-5 mr-auto mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
                     <img src="assets/imgs/Background/IMG-20250321-WA0304.jpg" alt="image" class="img-fluid">
                 </div>
                 <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                    <h3 class="line-bottom mb-4">Why Choose Us</h3>
                     <p>Mtendere Education Consult empowers students with trusted, transparent guidance to access top
                         global
                         universities.<br>
@@ -721,50 +770,10 @@
                         </div>
                     </div>
 
-                    <!-- Student 4 -->
-                    <div class="swiper-slide">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Edina.jpg" alt="Edna Karonga">
-                            <h3 class="student-name">Edna Karonga</h3>
-                            <p class="student-course">MBA - Chandigarh University</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story4">Read
-                                Story</a>
-                        </div>
-                    </div>
-
-                    <!-- Student 5 -->
-                    <div class="swiper-slide">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Ian Ndola.jpg" alt="Ian Ndola">
-                            <h3 class="student-name">Ian Ndola</h3>
-                            <p class="student-course">MBA - University of Alabama USA</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story5">Read
-                                Story</a>
-                        </div>
-                    </div>
-
-                    <!-- Student 6 -->
-                    <div class="swiper-slide">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Mirabel lopote 2.jpg" alt="Mirabel Lopote">
-                            <h3 class="student-name">Mirabel Lopote</h3>
-                            <p class="student-course">Masters in Fashion Design - PCTE</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story6">Read
-                                Story</a>
-                        </div>
-                    </div>
-
-                    <!-- Student 7 -->
-                    <div class="swiper-slide">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Lexina Kumwenda.jpg" alt="Lexina Kumwenda">
-                            <h3 class="student-name">Lexina Kumwenda</h3>
-                            <p class="student-course">BSc Interior Design - Chandigarh</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story7">Read
-                                Story</a>
-                        </div>
-                    </div>
-
+                </div>
+                <!---- Learn More ---->
+                <div class="text-center mt-4">
+                    <a href="#" class="btn btn-primary btn-lg">View All Success Stories</a>
                 </div>
             </div>
         </div>
@@ -1023,27 +1032,6 @@
         </div>
     </div>
 
-    <div class="untree_co-section pt-0 bg-img overlay"
-        style="background-image: url('assets/imgs/Cerebration.jpg'); background-repeat:no-repeat;">
-        <div class="container">
-            <div class="row align-items-center justify-content-center text-center">
-                <div class="col-lg-7">
-                    <h2 class="text-white mb-3" data-aos="fade-up" data-aos-delay="0">
-                        Join Our Global Network of Scholars</h2>
-                    </h2>
-                    <p class="text-white h5 mb-4" data-aos="fade-up" data-aos-delay="100">
-                        Experience a world of opportunities with Mtendere Education Consult. Our dedicated team is here
-                        to
-                        guide you through every step of your educational journey, from application to graduation.
-                    </p>
-                    <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                        data-toggle="modal">Enroll Now
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div id="formModal">
         <div class="modal-content">
             <span id="closeFormBtn">&times;</span>
@@ -1128,9 +1116,17 @@
 
     <div class="untree_co-section bg-light py-12">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Testimonial</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>What Our Students Say?</span></h1>
+                </h1>
+                <p class="lead">
+                    <span>Our students have come to rely on us for their international education needs.</span>
+                </p>
+            </div>
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
                     <div class="owl-carousel wide-slider-testimonial">
                         <!-- Testimonial 1 -->
                         <div class="item">
@@ -1195,7 +1191,14 @@
                             </blockquote>
                         </div>
                     </div>
-                    <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success Stories</button>
+                </div>
+                <div class="col-lg-5">  
+                    <div class="text-center">
+                        <a href="#" class="btn btn-primary btn-lg mt-5">
+                            <span class="icon-arrow-right"></span>
+                            <span>View All Testimonials</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1204,11 +1207,19 @@
     <!-- Blog Section Start -->
     <div class="untree_co-section bg-light py-12">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Latest Blogs</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>
+                            Stay Updated with Our Latest Insights
+                        </span></h1>
+                </h1>
+                <p class="lead">
+                    Our blog section features articles, news, and updates related to international studies and Mtendere.
+                </p>
+            </div>
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">Latest News & Articles</h3>
-                    <p class="lead">Stay updated with the latest news and articles from Mtendere Education Consult.</p>
-                    <a href="blog.html" class="btn btn-primary mt-4">View All News</a>
                     <div class="owl-carousel wide-slider-blog">
                         <!-- Blog Post 1 -->
                         <div class="item">
@@ -1245,17 +1256,12 @@
     </div>
     <!-- Blog Section End -->
 
-    <!-- APPLY CTA SECTION -->
-    <section id="apply-cta" class="py-5 bg-primary text-white text-center">
-        <div class="container">
-            <h2 class="display-4 mb-3 fw-bold">Ready to Start Your Journey?</h2>
-            <p class="lead mb-4">Take the first step toward an exciting future. Apply now to join one of our university
-                partners and study abroad in your dream destination.</p>
-            <a href="application-form-link.html" class="btn btn-light btn-lg px-4 py-2">
-                Apply Now
-            </a>
-        </div>
-    </section>
+    <!-- Call to Action -->
+    <div class="call-to-action text-center">
+        <h3>Ready to join Mtendere?</h3>
+        <p>Start your application today and shape your global future.</p>
+        <a href="#apply" class="btn cta-btn">Apply Now</a>
+    </div>
 
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
