--- a/index.html
+++ b/index.html
@@ -728,17 +728,17 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Success Story's</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>Inspiring Journeys of Our Students</span></h1>
+                        <span>Inspiring Journeys of Our Students</span>
                 </h1>
                 <p class="lead">
                     Transforming Lives Through Education
                 </p>
             </div>
-            <div class="carousel" data-aos="fade-up" data-aos-delay="200">
+            <div class="owl-carousel" data-aos="fade-up" data-aos-delay="200">
                 <div class="swiper-wrapper">
 
                     <!-- Student 1 -->
-                    <div class="carousel-item active">
+                    <div class="item active">
                         <div class="student-card">
                             <img src="assets/imgs/students/Carloline.jpg" alt="Caroline Tembo">
                             <h3 class="student-name">Caroline Tembo</h3>
@@ -749,7 +749,7 @@
                     </div>
 
                     <!-- Student 2 -->
-                    <div class="swiper-slide">
+                    <div class="item">
                         <div class="student-card">
                             <img src="assets/imgs/students/Janet Kandulu.jpg" alt="Janet Kandulu">
                             <h3 class="student-name">Janet Kandulu</h3>
@@ -760,7 +760,7 @@
                     </div>
 
                     <!-- Student 3 -->
-                    <div class="swiper-slide">
+                    <div class="item">
                         <div class="student-card">
                             <img src="assets/imgs/students/Trust Chikondi Mangani.jpg" alt="Trust Chikondi Mangani">
                             <h3 class="student-name">Trust Chikondi Mangani</h3>
