--- a/testimonial.html
+++ b/testimonial.html
@@ -126,172 +126,122 @@
         </div>
     </div>
 
-    <!-- Testimonial Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row align-items-center">
-                <div class="col-lg-5 mb-5 mb-lg-0">
-                    <div class="section-title position-relative mb-4">
-                        <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Testimonial</h6>
-                        <h1 class="display-4">What Say Our Students</h1>
+    <!-- Testimonial Section -->
+    <section class="py-5">
+        <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Testimonials</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>
+                            What Our Students Say?
+                        </span></h1>
+                </h1>
+                <p class="lead">
+                    Our students' success stories are a testament to our commitment to excellence. Hear from those who
+                    have embarked on their educational journeys with us.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial1.jpg" alt="Student 1" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Janet</h5>
+                            <p class="card-text">"Mtendere Education Consult made my dream of studying abroad a
+                                reality. Their guidance was invaluable!"</p>
+                            <a href="#janetModal" class="btn btn-primary" data-toggle="modal">Read More</a>
+                        </div>
                     </div>
-                    <p class="m-0"></p>
                 </div>
-                <div class="col-lg-7">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                Mtendere Education Consult has been a great platform for me to pursue my passion for
-                                education. I have been fortunate to receive numerous scholarships and opportunities, and
-                                I am grateful for the support and guidance I have received.
-
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/JanetKandulu.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Janet Kandulu
-                                    </h5>
-                                    <span>
-
-                                    </span>
-                                </div>
-                            </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial2.jpg" alt="Student 2" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Trust</h5>
+                            <p class="card-text">"I couldn't have asked for a better experience. The support was
+                                exceptional!"</p>
+                            <a href="#trustModal" class="btn btn-primary" data-toggle="modal">Read More</a>
                         </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial3.jpg" alt="Student 3" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Edna</h5>
+                            <p class="card-text">"The team at Mtendere was with me every step of the way. Highly
+                                recommend!"</p>
+                            <a href="#ednaModal" class="btn btn-primary" data-toggle="modal">Read More</a>
                         </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial4.jpg" alt="Student 4" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ian</h5>
+                            <p class="card-text">"Thanks to Mtendere, I got accepted into my dream university. Their
+                                expertise is unmatched!"</p>
+                            <a href="#ianModal" class="btn btn-primary" data-toggle="modal">Read More</a>
                         </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-light p-5">
-                            <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <p>
-                                I am so grateful to Mtendere Education Consult for helping me achieve my dream of
-                                studying abroad. The team was incredibly supportive and provided me with all the
-                                resources I needed to succeed. I highly recommend them to anyone looking to study
-                                abroad.
-                            </p>
-                            <div class="d-flex flex-shrink-0 align-items-center mt-4">
-                                <img class="img-fluid mr-4" src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="">
-                                <div>
-                                    <h5>
-                                        Dorothy McPherson
-                                    </h5>
-                                    <span></span>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial5.jpg" alt="Student 5" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Mirabel</h5>
+                            <p class="card-text">"I would highly recommend Mtendere to anyone looking to explore their dreams."</p>
+                            <a href="#mirabelModal" class="btn btn-primary" data-toggle="modal">Read More</a>
+                        </div>  
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card testimonial-card">
+                        <img src="assets/imgs/testimonial6.jpg" alt="Student 6" class="card-img-top">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Lexina</h5>
+                            <p class="card-text">"The support I received was incredible. I felt like I had a family
+                                behind me!"</p>
+                            <a href="#lexinaModal" class="btn btn-primary" data-toggle="modal">Read More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Testimonial End -->
+    </section>
+    <!-- Testimonial Modals -->
 
+    <!-- Janet Modal -->
+    <div class="modal fade" id="janetModal" tabindex="-1" role="dialog" aria-labelledby="janetModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="janetModalLabel">Janet's Journey</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="assets/imgs/testimonial1.jpg" alt="Janet" class="img-fluid mb-3">
+                    <p>"Mtendere Education Consult made my dream of studying abroad a reality. Their guidance was
+                        invaluable! I received personalized support throughout the application process, and they helped
+                        me secure a scholarship to my dream university. I couldn't have done it without them!"</p>
+                    <p><strong>Janet</strong></p>
+                    <p>MTENDERE Education Consult</p>
+                    <p>San Diego, CA</p>
+                    <p>Email: janet.doe@example.com</p>
+                    <p>Phone: +1 (555) 123-4567</p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/janet-doe/">janet-doe@example.com</a></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>  
+            </div>
+        </div>
+    </div>
+            
     <!-- Call to Action -->
     <div class="call-to-action text-center">
         <h3>Ready to join Mtendere?</h3>
