--- a/index.html
+++ b/index.html
@@ -719,6 +719,25 @@
                 </div>
             </div>
             <!-- Repeat for more video items -->
+            <div class="carousel-item">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/examplevideo2" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Student Testimonial: Study in Canada</h5>
+                    <p>Discover how this student achieved their dreams in Canada!</p>
+                </div>
+            </div>
+            <!-- Repeat for more video items -->
+            <div class="carousel-item">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/examplevideo3" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Student Testimonial: Study in France</h5>
+                    <p>See how this student overcame their fears and achieved their goals!</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -728,7 +747,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Success Story's</h6>
                 <h1 class="display-5"><span class="text-primary">
-                        <span>Inspiring Journeys of Our Students</span>
+                    <span>Inspiring Journeys of Our Students</span>
                 </h1>
                 <p class="lead">
                     Transforming Lives Through Education
