--- a/index.html
+++ b/index.html
@@ -755,7 +755,6 @@
             </div>
             <div class="owl-carousel" data-aos="fade-up" data-aos-delay="200">
                 <div class="swiper-wrapper">
-
                     <!-- Student 1 -->
                     <div class="item active">
                         <div class="student-card">
@@ -766,7 +765,8 @@
                                 Story</a>
                         </div>
                     </div>
-
+                </div>
+                <div class="swiper-wrapper">
                     <!-- Student 2 -->
                     <div class="item">
                         <div class="student-card">
@@ -777,7 +777,8 @@
                                 Story</a>
                         </div>
                     </div>
-
+                </div>
+                <div class="swiper-wrapper">
                     <!-- Student 3 -->
                     <div class="item">
                         <div class="student-card">
@@ -788,7 +789,6 @@
                                 Story</a>
                         </div>
                     </div>
-
                 </div>
                 <!---- Learn More ---->
                 <div class="text-center mt-4">
